euphony-dsp/src/snapshots/euphony_dsp__unary__Abs.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Abs",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 1,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Computes the absolute value of `input`. Returns `NAN` if the number is `NAN`.\n",
}
