euphony-dsp/src/snapshots/euphony_dsp__unary__Acosh.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Acosh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 3,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Inverse hyperbolic cosine function.\n",
    fork: None,
}
