euphony-dsp/src/snapshots/euphony_dsp__unary__Asin.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 51
expression: node
---
Node {
    name: "Asin",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 4,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Computes the arcsine of a number. Return value is in radians in the range [-pi/2, pi/2] or NaN if the number is outside the range [-1, 1].\n",
}
