euphony-dsp/src/snapshots/euphony_dsp__unary__Asinh.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 57
expression: node
---
Node {
    name: "Asinh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 5,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Inverse hyperbolic sine function.\n",
}
