euphony-dsp/src/snapshots/euphony_dsp__unary__Atan.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 63
expression: node
---
Node {
    name: "Atan",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 6,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Computes the arctangent of a number. Return value is in radians in the range [-pi/2, pi/2];\n",
}
