euphony-dsp/src/snapshots/euphony_dsp__unary__Atanh.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 69
expression: node
---
Node {
    name: "Atanh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 7,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Inverse hyperbolic tangent function.\n",
}
