euphony-dsp/src/snapshots/euphony_dsp__unary__Cbrt.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Cbrt",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 8,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Returns the cube root of a number.\n",
}
