euphony-dsp/src/snapshots/euphony_dsp__unary__Ceil.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Ceil",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 9,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the smallest integer greater than or equal to a number.\n",
    fork: None,
}
