euphony-dsp/src/snapshots/euphony_dsp__unary__Cos.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Cos",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 10,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Computes the cosine of a number (in radians).\n",
    fork: None,
}
