euphony-dsp/src/snapshots/euphony_dsp__unary__Cosh.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Cosh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 11,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Hyperbolic cosine function.\n",
}
