euphony-dsp/src/snapshots/euphony_dsp__unary__Exp.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Exp",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 12,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Returns `e^(self)`, (the exponential function).\n",
}
